--- a/app/assets/stylesheets/products/_new.scss
+++ b/app/assets/stylesheets/products/_new.scss
@@ -57,25 +57,26 @@
   font-size: 13px;
   margin-bottom: 20px;
 }
-.products_new-imagearea{
+.products_new-image-box{
   min-height: 150px;
   width: 100%;
   background-color: #f8f8f8;
   border: dashed 1px #d3d3d3;
   margin-bottom: 20px;
-  &__select{
-    min-height: 100%;
-    width: 100%;
-    display: block;
-    text-align: center;
-    padding-top: 40px;
-    cursor: pointer;
-    &--icon{
-      padding-bottom: 10px;
-    }
-    &--explanation{
-      font-size: 11px;
-    }
+}
+
+.products_new-imagearea__select{
+  min-height: 100%;
+  width: 100%;
+  display: block;
+  text-align: center;
+  padding-top: 40px;
+  cursor: pointer;
+  &--icon{
+    padding-bottom: 10px;
+  }
+  &--explanation{
+    font-size: 11px;
   }
 }
 
