--- a/app/assets/stylesheets/modules/_pickup_category.scss
+++ b/app/assets/stylesheets/modules/_pickup_category.scss
@@ -73,6 +73,27 @@
         display: inline-block;
         margin: 0 auto;
         height: 100%;
+        position: relative;
+        &__status {
+          padding:5px;
+            font-weight:bold;
+            font-size:30px;
+            color:#fff;
+            background:#c00;
+            text-align: center;
+            width: 80%;
+            z-index: 2;
+            -moz-box-shadow: 1px 1px 2px #333;
+            -webkit-box-shadow: 1px 1px 2px #333;
+            -moz-transform: rotate(340deg);
+            -webkit-transform: rotate(340deg);
+            -moz-transition: 0.4s ease-in-out;
+            -webkit-transition: 0.4s ease-in-out;
+            position: absolute;
+            margin-top: 50px;
+            margin-left: 20px;
+            opacity: 0.7;
+        }
         .pickup_category__product__images {
           width: 220px;
           height: 150px;
