--- a/app/assets/stylesheets/products/_purchase.scss
+++ b/app/assets/stylesheets/products/_purchase.scss
@@ -1,113 +1,99 @@
-.products-purchase-main{
+.products-purchase-wrapper{
   display: block;
   background-color: #f8f8f8;
   padding: 40px 0px;
-  .products-purchase-l-single-container.buy-item-container{
+  &__buy-item-container{
     width: 700px;
     margin: 0 auto;
     background: #fff;
-    .products-purchase-l-single-head.buy-head{
+    &__buy-head{
       font-weight: bold;
       text-align: center;
       line-height: 1.5;
       font-size: 22px;
       padding: 32px;
-    } //購入内容の確認
+    }
+  }
+}
 
-
-    .products-purchase-buy-content.buy-item{
-      text-align: center;
-      padding: 32px 16px;
-      border-top: 1px solid #f5f5f5;
-      .products-purchase-buy-content-inner{
-        max-width: 343px;
-        margin: 0 auto;
-        padding: 0;
-
-        .products-purchase-buy-item-box{
-          display: flex;
-
-          h3.products-purchase-buy-item-image{
-            height: 80px;
-            width: 80px;
-            min-width: 80px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            img.products-purchase-is-higher-height.lazyloaded{
-              width: auto;
-              max-height: 80px;
-              // vertical-align: middle;
-            }
-          }
-          .products-purchase-buy-item-detail{
-            margin-left: 16px;
-
-            p.products-purchase-buy-item-name{
-              font-size: 14px;
-              margin: 0;
-              padding: 0 0 8px;
-              line-height: 1.5;
-              text-align: left;
-            } //ギャグマンガ日和GB 1 増田こうすけ劇場
-            p.products-purchase-buy-price-ja.bold{
-              margin: 0;
-              text-align: left;
-              font-size: 15px;
-              font-weight: 600;
-              span.products-purchase-item-shipping-fee{
-                font-size: 12px;
-                display: inline-block;
-              } 
-            }
-          }
+.products-purchase-buy-content{
+  text-align: center;
+  padding: 32px 16px;
+  padding-bottom: 48px;
+  border-top: 1px solid #f5f5f5;
+  &__inner{
+    max-width: 343px;
+    margin: 0 auto;
+    padding: 0;
+    &__item-box{
+      display: flex;
+      &__image{
+        height: 80px;
+        width: 80px;
+        min-width: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &--img-loaded{
+          width: auto;
+          max-height: 80px;
+          // vertical-align: middle;
+        }
+      }
+      &__detail{
+        margin-left: 16px;
+        &__name{
+          font-size: 14px;
+          margin: 0;
+          padding: 0 0 8px;
+          line-height: 1.5;
+          text-align: left;
+        } //ギャグマンガ日和GB 1 増田こうすけ劇場
+        &__price-ja{
+          margin: 0;
+          text-align: left;
+          font-size: 15px;
+          font-weight: 600;
+          &__shipping-fee{
+            font-size: 12px;
+            display: inline-block;
+          } 
         }
       }
     }
+  }
 
-
-    .products-purchase-buy-content.buy-item{
-      padding-bottom: 48px;
-      text-align: center;
-      .products-purchase-buy-content-inner{
-        max-width: 343px;
-        margin: 0 auto;
-        // .buy-form{} //{:action => "https://www.mercari.com/jp/transaction/buy/done/m58985111622/", :method => "POST", :novalidate => "novalidate"}
-          ul.products-purchase-buy-price-table{
-            margin: 0;
-            display: table;
-            border-collapse: collapse;
-            width: 100%;
-            ul{
-              list-style: none;
-            }
-
-            li.products-purchase-buy-price-row.buy-you-pay.bold{
-              border: 0;
-              font-size: 30px;
-              display: table-row;
-              font-weight: 600;
-              .products-purchase-buy-price-cell.buy-price-cell-label{
-                text-align: left;
-                font-size: 18px;
-                display: table-cell;
-                padding: 0;
-              } //支払い金額
-              .products-purchase-buy-price-cell{
-                display: table-cell;
-                padding: 0;
-                text-align: right;
-                span{
-                  font-size: 22px;
-                }
-              }
-            }
-          }
-
-
-
-
+  ul.products-purchase-buy-price-table{
+    margin: 0;
+    display: table;
+    border-collapse: collapse;
+    width: 100%;
+    ul{
+      list-style: none;
+    }
+    li.products-purchase-buy-price-row{
+      border: 0;
+      font-size: 30px;
+      display: table-row;
+      font-weight: 600;
+      .products-purchase-buy-price-cell.buy-price-cell-label{
+        text-align: left;
+        font-size: 18px;
+        display: table-cell;
+        padding: 0;
+      } //支払い金額
+      .products-purchase-buy-price-cell{
+        display: table-cell;
+        padding: 0;
+        text-align: right;
+        span{
+        font-size: 22px;
+        }
+      }
+    }
+  }
+}
+          // ポイント
           // .buy-accordion.buy-not-have-point{
           //   color: #888;
           //   margin: 10px 0 32px;
@@ -117,68 +103,55 @@
           //     .checkbox-default.buy-use-point{}
           //       .icon-check{}
 
-
-          .products-purchase-buy-content.buy-user-info{
-            padding: 32px 0;
-            transition: all ease-out .3s;
-            text-align: left;
-            border-top: 1px solid #f5f5f5;
-          } //{"data-buy" => "pay-method"}
-            .products-purchase-buy-content-inner{
-              max-width: 343px;
-              margin: 0 auto;
-            }
-              // .clearfix{}
-                .products-purchase-l-left{
-                  margin: 0;
-                  font-size: 14px;
-                  float: left;
-                  font-weight: 600;
-                } //支払い方法
-                .products-purchase-l-right.buy-user-info-fix{
-                  display: block;
-                  text-align: right;
-                  float: right;
-                  color: #0099e8;
-                  text-decoration: none;
-                } 
-              .products-purchase-buy-user-info-text{
-                line-height: 1.5;
-                text-align: left;
-                margin: 8px 0 0;
-                font-size: 14px;
-              }
-              .products-purchase-buy-card-logo{
-                margin: 8px 0 0;
-              }
-
-
-
-
-          // .products-purchase-buy-content.buy-user-info{}
-            p.products-purchase-has-info-text{
-              color: #888;
-              line-height: 1.5;
-              padding-bottom: 24px;
-              font-size: 14px;
-              span.products-purchase-bold{
-                font-weight: 600;
-              }
-            }
-            .products-purchase-btn-default.btn-red.bold{
-              background: #3CCACE;
-              border: 1px solid #3CCACE;
-              color: #fff;
-              display: block;
-              width: 100%;
-              line-height: 48px;
-              font-size: 14px;
-              transition: all ease-out .3s;
-              cursor: pointer;
-              text-align: center;
-              font-weight: 600;
-            } //{"data-item-id" => "m58985111622", "data-modal" => "identity-confirmation", :type => "submit"} 購入する
-      }
-    }
+.buy-user-info{
+  padding: 32px 0;
+  text-align: left;
+    .products-purchase-l-left{
+      padding: 0;
+      margin: 0;
+      font-size: 14px;
+      float: left;
+      font-weight: 600;
+    } 
+    .products-purchase-l-right.buy-user-info-fix{
+      display: block;
+      text-align: right;
+      float: right;
+      color: #0099e8;
+      text-decoration: none;
+    } 
+  .products-purchase-buy-user-info-text{
+    line-height: 1.5;
+    text-align: left;
+    margin: 8px 0 0;
+    font-size: 14px;
+  }
+  .products-purchase-buy-card-logo{
+    margin: 8px 0 0;
   }
 }
+
+
+
+p.products-purchase-has-info-text{
+  color: #888;
+  line-height: 1.5;
+  padding-bottom: 24px;
+  font-size: 14px;
+  span.products-purchase-bold{
+    font-weight: 600;
+  }
+}
+.products-purchase-btn-default.btn-red.bold{
+  background: #3CCACE;
+  border: 1px solid #3CCACE;
+  color: #fff;
+  display: block;
+  width: 100%;
+  line-height: 48px;
+  font-size: 14px;
+  transition: all ease-out .3s;
+  cursor: pointer;
+  text-align: center;
+  font-weight: 600;
+} 
