--- a/app/views/products/purchase.html.haml
+++ b/app/views/products/purchase.html.haml
@@ -2,35 +2,31 @@
   %section.products-purchase-wrapper__buy-item-container
     %h2.products-purchase-wrapper__buy-item-container__buy-head 購入内容の確認
 
-
     .products-purchase-buy-content
       .products-purchase-buy-content__inner
         .products-purchase-buy-content__inner__item-box
           %h3.products-purchase-buy-content__inner__item-box__image
-            %img.products-purchase-buy-content__inner__item-box__image--img-loaded{:alt => "", "data-src" => "https://static.mercdn.net/thumb/photos/m58985111622_1.jpg?1587558918", :src => "https://static.mercdn.net/thumb/photos/m58985111622_1.jpg?1587558918"}/
+            %img.products-purchase-buy-content__inner__item-box__image--img-loaded{:alt => "", "data-src" => "#", :src => "#"}/
           .products-purchase-buy-content__inner__item-box__detail
             %p.products-purchase-buy-content__inner__item-box__detail__name ギャグマンガ日和GB 1 増田こうすけ劇場
             %p.products-purchase-buy-content__inner__item-box__detail__price-ja
               %span ¥400
               %span.products-purchase-buy-content__inner__item-box__detail__price-ja__shipping-fee （税込）送料込み
 
-
-
     %section.products-purchase-buy-content
       .products-purchase-buy-content__inner
-        %form#buy-item-form.buy-form{:action => "https://www.mercari.com/jp/transaction/buy/done/m58985111622/", :method => "POST", :novalidate => "novalidate"}
+        %form#buy-item-form.buy-form{:action => "#", :method => "POST", :novalidate => "novalidate"}
           %ul.products-purchase-buy-price-table
             %li.products-purchase-buy-price-row
               .products-purchase-buy-price-cell.buy-price-cell-label 支払い金額
               .products-purchase-buy-price-cell
                 %span{"data-buy-pay" => "400"} ¥400
 
-
           %section.buy-user-info{"data-buy" => "pay-method"}
             .products-purchase-buy-content__inner
               .clearfix
                 %h3.products-purchase-l-left 支払い方法
-                %a.products-purchase-l-right.buy-user-info-fix{:href => "https://www.mercari.com/jp/transaction/select_card/m58985111622/?_s=U2FsdGVkX1_af0K0gctOZaHsSfayx02KI3wH_o8bSUCaGTSZkBUAreEHfbK2ZHuYKANCrXQkjQEWpzwjzl6lFNZzIdUk0DYWhk7tCiyoUXy6HYZ2-wHzVOscIJXrIZXH"}
+                %a.products-purchase-l-right.buy-user-info-fix{:href => "#"}
                   %span 変更する
               %p.products-purchase-buy-user-info-text
                 %br/
@@ -40,14 +36,14 @@
                 %br/
                 有効期限 08 / 23
               %figure.products-purchase-buy-card-logo
-                %img{:alt => "visa", :height => "15", :src => "//pcweb-assets.mercdn.net/assets/img/card/visa.svg?1536441709", :width => "49"}/
+                %img{:alt => "visa", :height => "15", :src => "#", :width => "49"}/
               %p
 
           %section.buy-user-info
             .products-purchase-buy-content__inner
               .clearfix
                 %h3.products-purchase-l-left 配送先
-                %a.products-purchase-l-right.buy-user-info-fix{:href => "https://www.mercari.com/jp/transaction/address/m58985111622/?_s=U2FsdGVkX1_af0K0gctOZaHsSfayx02KI3wH_o8bSUCaGTSZkBUAreEHfbK2ZHuYKANCrXQkjQEWpzwjzl6lFNZzIdUk0DYWhk7tCiyoUXy6HYZ2-wHzVOscIJXrIZXH"}
+                %a.products-purchase-l-right.buy-user-info-fix{:href => "#"}
                   %span 変更する
               %address.products-purchase-buy-user-info-text
                 %p
@@ -59,12 +55,9 @@
                   %br/
                   青木　健
 
-          
-          
           %section.buy-user-info
             %p.products-purchase-has-info-text
               郵便局/コンビニ受取をご希望の方は、購入後に
               %span.products-purchase-bold> 取引画面
               から受取場所を変更をすることが可能です。出品者が発送作業を開始した後は受取場所の変更ができませんので、早めに変更を行ってください。
             %button.products-purchase-btn-default.btn-red.bold{"data-item-id" => "m58985111622", "data-modal" => "identity-confirmation", :type => "submit"} 購入する
-            
