--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -75,5 +75,5 @@
                 %p.products_new-product_price--yen ¥
                 = form.number_field :price, class: "products_new-product_price--box", placeholder:"0"
         .products_new-product__submit
-          = form.submit '出品する', class: "products_new-product__submit--btn"
+          = form.submit '変更する', class: "products_new-product__submit--btn"
 .products_new-footer
