--- a/app/views/products/buy.html.haml
+++ b/app/views/products/buy.html.haml
@@ -1,3 +1,4 @@
+
 %main.products-purchase-wrapper
   %section.products-purchase-wrapper__buy-item-container
     %h2.products-purchase-wrapper__buy-item-container__buy-head 購入内容の確認
@@ -6,11 +7,14 @@
       .products-purchase-buy-content__inner
         .products-purchase-buy-content__inner__item-box
           %h3.products-purchase-buy-content__inner__item-box__image
-            %img.products-purchase-buy-content__inner__item-box__image--img-loaded{:alt => "", "data-src" => "#", :src => "#"}/
+            %img.products-purchase-buy-content__inner__item-box__image--img-loaded{:src => @product.product_images.first.image.url}/
           .products-purchase-buy-content__inner__item-box__detail
-            %p.products-purchase-buy-content__inner__item-box__detail__name ギャグマンガ日和GB 1 増田こうすけ劇場
+            %p.products-purchase-buy-content__inner__item-box__detail__name 
+              = @product.name
             %p.products-purchase-buy-content__inner__item-box__detail__price-ja
-              %span ¥400
+              %span
+                ¥
+                = @product.price.to_s(:delimited)
               %span.products-purchase-buy-content__inner__item-box__detail__price-ja__shipping-fee （税込）送料込み
 
     %section.products-purchase-buy-content
@@ -20,7 +24,10 @@
             %li.products-purchase-buy-price-row
               .products-purchase-buy-price-cell.buy-price-cell-label 支払い金額
               .products-purchase-buy-price-cell
-                %span{"data-buy-pay" => "400"} ¥400
+                -# %span{"data-buy-pay" => "400"} ¥400
+                %span
+                ¥
+                = @product.price.to_s(:delimited)
 
           %section.buy-user-info{"data-buy" => "pay-method"}
             .products-purchase-buy-content__inner
