-update_creditcards/new編集
-what
クレジットカード登録画面のhaml,scssを編集

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,5 @@
 @import "modules/users.show";
 @import "categories/index";
 @import "categories/categorymenu";
+@import "modules/credit_cards.new";
+
