--- a/app/assets/stylesheets/modules/_users.show.scss
+++ b/app/assets/stylesheets/modules/_users.show.scss
@@ -1,22 +1,19 @@
 .users.show{
   background: #f5f5f5;
-
-
   width: 100%;
-  height: 400vh;
+  height: auto;
   display: flex;
   justify-content: center;
+  padding-top: 35px;
+  padding-bottom: 35px;
   &__left-wrapper{
     width: 280px;
     height: 100%;
-    margin-top: 40px;
     margin-right: 60px;
     a{
       text-decoration: none;
       color:black
     }
-    
-    
     &__contents{
       display: flex;
       flex-direction: column;
@@ -28,11 +25,10 @@
           color:#000;
           background-color: lightgrey;
           cursor: pointer;
-          
         }
         color: #555;
         display: inline-block;
-        width: 280px;
+        width: 100%;
         height: 48px;
         line-height: 48px;
         padding-left: 20px;
@@ -41,17 +37,12 @@
         box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2);
         font-size: 14px;
       }
-
     }
-
     &__furimapay-desc{
       margin-top: 40px;
       h{
         font-weight: bold;
-
       }
-
-
     }
     &__furimapay{
       display: flex;
@@ -64,7 +55,7 @@
         }
         color: #555;
         display: inline-block;
-        width: 280px;
+        width: 100%;
         height: 48px;
         line-height: 48px;
         padding-left: 20px;
@@ -74,14 +65,11 @@
         font-size: 14px;
       }
     }
-
     &__settings-desc{ 
       margin-top: 40px;
       h{
         font-weight: bold;
-
       }
-
     }
     &__settings{
       display: flex;
@@ -94,7 +82,7 @@
         }
         color: #555;
         display: inline-block;
-        width: 280px;
+        width: 100%;
         height: 48px;
         line-height: 48px;
         padding-left: 20px;
@@ -105,11 +93,9 @@
       }
     }
   }
-
   &__right-wrapper{
     width: 700px;
     height: 200px;
-    margin-top: 40px;
     display: flex;
     flex-direction: column;
 
@@ -117,32 +103,23 @@
       text-align: center;
       background-image:url("pict/sakura.jpg");
       background-size:cover;
-
-
       &__icon{
         height: 60px;
         margin-top: 40px;
         img{
           border-radius: 50%;
-
         }
       }
       &__nickname{
         height: 30px;
         line-height: 30px;
         font-size: 14px;
-
-
-
       }
       &__products-count{
         height: 30px;
         line-height: 30px;
         font-size: 14px;
         margin-bottom: 24px;
-
-
-
       } 
     }
   }
