update_creditcards/showビュー編集
-what
クレジットカード詳細画面での登録済カード削除機能を実装

--- a/app/assets/stylesheets/modules/_credit_cards.new.scss
+++ b/app/assets/stylesheets/modules/_credit_cards.new.scss
@@ -73,6 +73,7 @@
           background-color: red;
           border: none;
           color: white;
+          cursor: pointer;
         }
       }
     }
