--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,4 +21,4 @@
 @import "categories/index";
 @import "categories/categorymenu";
 @import "modules/credit_cards.new";
-
+@import "modules/credit_cards.show";
