--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -8,13 +8,13 @@
           = link_to c[:path],method: c[:verb] do
             = c[:name]
 
-    .users.show__left-wrapper__furimapay-desc
-      %h  フリマペイ
-      - @furimapays.each do |f|
-        .users.show__left-wrapper__furimapay
-          .users.show__left-wrapper__furimapay__furimapay-title
-            = link_to f[:path],method: f[:verb] do
-              = f[:name]
+    -# .users.show__left-wrapper__furimapay-desc
+    -#   %h  フリマペイ
+    -#   - @furimapays.each do |f|
+    -#     .users.show__left-wrapper__furimapay
+    -#       .users.show__left-wrapper__furimapay__furimapay-title
+    -#         = link_to f[:path],method: f[:verb] do
+    -#           = f[:name]
 
     .users.show__left-wrapper__settings-desc
       %h  設定
