--- a/app/views/products/buy.html.haml
+++ b/app/views/products/buy.html.haml
@@ -19,12 +19,11 @@
 
     %section.products-purchase-buy-content
       .products-purchase-buy-content__inner
-        %form#buy-item-form.buy-form{:action => "#", :method => "POST", :novalidate => "novalidate"}
+        = form_tag(action: :purchase, method: :post) do
           %ul.products-purchase-buy-price-table
             %li.products-purchase-buy-price-row
               .products-purchase-buy-price-cell.buy-price-cell-label 支払い金額
               .products-purchase-buy-price-cell
-                -# %span{"data-buy-pay" => "400"} ¥400
                 %span
                 ¥
                 = @product.price.to_s(:delimited)
@@ -39,11 +38,14 @@
                 %br/
                 クレジットカード
                 %br/
-                ************7375
+                = "**** **** **** " + @creditcard_information.last4
                 %br/
-                有効期限 08 / 23
+                - mm = @creditcard_information.exp_month.to_s
+                - yy = @creditcard_information.exp_year.to_s.slice(2,3)
+                = mm + " / " + yy
               %figure.products-purchase-buy-card-logo
-                %img{:alt => "visa", :height => "15", :src => "#", :width => "49"}/
+                %img{:alt => @card_brand, :height => "15", :src => "//pcweb-assets.mercdn.net/assets/img/card/visa.svg?2246739708", :width => "49"}/
+                -# = image_tag "#{@card_src}",alt: @card_brand, id: "card_image"
               %p
 
           %section.buy-user-info
@@ -54,17 +56,24 @@
                   %span 変更する
               %address.products-purchase-buy-user-info-text
                 %p
-                  %br/
-                  〒176-0005
-                  %br/
-                  東京都 練馬区 ***2-*-*
-
-                  %br/
-                  青木　健
-
+                  =@address.postal_code
+                  %br
+                  =@address.prefectures
+                  %br
+                  =@address.city
+                  =@address.address_detail
+                  =@address.apartment_name
+                  =@address.room_number
+                  =@address.phone_number
+                  %br
+                  =@user.last_name
+                  =@user.first_name
           %section.buy-user-info
             %p.products-purchase-has-info-text
               郵便局/コンビニ受取をご希望の方は、購入後に
               %span.products-purchase-bold> 取引画面
               から受取場所を変更をすることが可能です。出品者が発送作業を開始した後は受取場所の変更ができませんので、早めに変更を行ってください。
-            %button.products-purchase-btn-default.btn-red.bold{"data-item-id" => "m58985111622", "data-modal" => "identity-confirmation", :type => "submit"} 購入する
+            -# = form_with(action: :purchase, method: :post, local: true) do
+            -#   = submit_tag("購入する", class:"purchase")
+      
+          = submit_tag("購入する", class:"purchase")
