--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,87 +1,84 @@
 .registrations-new
-
-  .registrations-new__head
   .registrations-new__wrapper
-    .registrations-new__wrapper__box
-      .registrations-new__wrapper__box__nav
-        会員情報入力
-      .registrations-new__wrapper__box__form
-        .registrations-new__wrapper__box__form__set
+    .registrations-new__wrapper__nav
+      会員情報入力
+    .registrations-new__wrapper__form
+      .registrations-new__wrapper__form__set
 
-          = form_for(@user, url: user_registration_path) do |f|
-            = render "devise/shared/error_messages", resource: @user
+        = form_for(@user, url: user_registration_path) do |f|
+          = render "devise/shared/error_messages", resource: @user
 
-            .registrations-new__wrapper__box__form__set__nickname
-              ニックネーム
-              %span.form-require 必須
-              %br/
-              = f.text_field :nickname, placeholder: '例）フリマ太郎'
+          .registrations-new__wrapper__form__set__nickname
+            ニックネーム
+            %span.form-require 必須
+            %br/
+            = f.text_field :nickname, placeholder: '例）フリマ太郎'
+          
+          .registrations-new__wrapper__form__set__email
+            メールアドレス
+            %span.form-require 必須
+            %br/
+            = f.email_field :email, placeholder: 'PC・携帯どちらでも可'
+          
+          .registrations-new__wrapper__form__set__password
+            パスワード
+            %span.form-require 必須
+            %br/
+            = f.password_field :password, placeholder: '7文字以上の半角英数字' 
+            .registrations-new__wrapper__form__set__password__desc
+              ※ 英字と数字の両方を含めて設定してください
             
-            .registrations-new__wrapper__box__form__set__email
-              = f.label :email
+          .registrations-new__wrapper__form__set__passwordconfirmation
+            = f.label :password_confirmation
+            %span.form-require 必須
+            %br/
+            = f.password_field :password_confirmation, placeholder: 'パスワードをもう一度入力してください' 
+
+          .registrations-new__wrapper__form__set__desc-safety
+            %h 本人確認
+            %br/
+            安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
+
+          .registrations-new__wrapper__form__set__name
+            .registrations-new__wrapper__form__set__name__last-name
+              = f.label :last_name
+              お名前(全角) 
               %span.form-require 必須
               %br/
-              = f.email_field :email, placeholder: 'PC・携帯どちらでも可'
-            
-            .registrations-new__wrapper__box__form__set__password
-              = f.label :password
+              = f.text_field :last_name, placeholder: '例）山田'
+            .registrations-new__wrapper__form__set__name__first-name
+              = f.label :first_name
+              %br/
+              = f.text_field :first_name, placeholder: '例）彩'
+
+          .registrations-new__wrapper__form__set__ruby-name
+            .registrations-new__wrapper__form__set__ruby-name__last-name
+              = f.label :ruby_last_name
+              お名前カナ(全角)  
               %span.form-require 必須
               %br/
-              = f.password_field :password, placeholder: '7文字以上の半角英数字' 
-              .registrations-new__wrapper__box__form__set__password__desc
-                ※ 英字と数字の両方を含めて設定してください
-              
-            .registrations-new__wrapper__box__form__set__passwordconfirmation
-              = f.label :password_confirmation
-              %span.form-require 必須
+              = f.text_field :ruby_last_name, placeholder: '例）ヤマダ'
+            .registrations-new__wrapper__form__set__ruby-name__first-name
+              = f.label :ruby_first_name
               %br/
-              = f.password_field :password_confirmation, placeholder: 'パスワードをもう一度入力してください' 
+              = f.text_field :ruby_first_name, placeholder: '例）アヤ'
+          
+          .registrations-new__wrapper__form__set__date-index
+            %h 生年月日
+            %span.form-require 必須
 
-            .registrations-new__wrapper__box__form__set__desc-safety
-              %h 本人確認
-              %br/
-              安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
+          .registrations-new__wrapper__form__set__birthdate
 
-            .registrations-new__wrapper__box__form__set__name
-              .registrations-new__wrapper__box__form__set__name__last-name
-                = f.label :last_name
-                お名前(全角) 
-                %span.form-require 必須
-                %br/
-                = f.text_field :last_name, placeholder: '例）山田'
-              .registrations-new__wrapper__box__form__set__name__first-name
-                = f.label :first_name
-                %br/
-                = f.text_field :first_name, placeholder: '例）彩'
+            .registrations-new__wrapper__form__set__birthdate__year
+              .birthdate_field
+                = f.label :birthdate
+                = raw sprintf(f.date_select(:birthdate, include_blank: true, use_month_numbers: true,start_year: 1920,end_year: (Time.now.year - 10),date_separator: '%s'),'年 ', '月 ')
+              %p 日  
 
-            .registrations-new__wrapper__box__form__set__ruby-name
-              .registrations-new__wrapper__box__form__set__ruby-name__last-name
-                = f.label :ruby_last_name
-                お名前カナ(全角)  
-                %span.form-require 必須
-                %br/
-                = f.text_field :ruby_last_name, placeholder: '例）ヤマダ'
-              .registrations-new__wrapper__box__form__set__ruby-name__first-name
-                = f.label :ruby_first_name
-                %br/
-                = f.text_field :ruby_first_name, placeholder: '例）アヤ'
-            
-            .registrations-new__wrapper__box__form__set__date-index
-              %h 生年月日
-              %span.form-require 必須
+          .registrations-new__wrapper__form__set__about-form
+            %p1 ※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
 
-            .registrations-new__wrapper__box__form__set__birthdate
-
-              .registrations-new__wrapper__box__form__set__birthdate__year
-                .birthdate_field
-                  = f.label :birthdate
-                  = raw sprintf(f.date_select(:birthdate, include_blank: true, use_month_numbers: true,start_year: 1920,end_year: (Time.now.year - 10),date_separator: '%s'),'年 ', '月 ') + '日'
-
-
-            .registrations-new__wrapper__box__form__set__about-form
-              %p1 ※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
-
-            .registrations-new__wrapper__box__form__set__actions
-              = f.submit "商品送付先の入力画面へ"
-                        
-          = render "devise/shared/links"
+          .registrations-new__wrapper__form__set__actions
+            = f.submit "商品送付先の入力画面へ"
+                      
+        = render "devise/shared/links"
