--- a/app/assets/stylesheets/products/_buy.scss
+++ b/app/assets/stylesheets/products/_buy.scss
@@ -35,7 +35,7 @@
         justify-content: center;
         align-items: center;
         &--img-loaded{
-          width: auto;
+          max-width: 80px;
           max-height: 80px;
         }
       }
