--- a/app/views/products/buy.html.haml
+++ b/app/views/products/buy.html.haml
@@ -28,12 +28,11 @@
                 ¥
                 = @product.price.to_s(:delimited)
 
-          %section.buy-user-info{"data-buy" => "pay-method"}
+          %section.buy-user-info
             .products-purchase-buy-content__inner
               .clearfix
                 %h3.products-purchase-l-left 支払い方法
-                %a.products-purchase-l-right.buy-user-info-fix{:href => "#"}
-                  %span 変更する
+                -# = link_to "変更する", "", {class: "products-purchase-l-right.buy-user-info-fix"} do
               %p.products-purchase-buy-user-info-text
                 %br/
                 クレジットカード
@@ -52,10 +51,10 @@
             .products-purchase-buy-content__inner
               .clearfix
                 %h3.products-purchase-l-left 配送先
-                %a.products-purchase-l-right.buy-user-info-fix{:href => "#"}
-                  %span 変更する
+                -# = link_to "変更する", "", {class: "products-purchase-l-right.buy-user-info-fix"} do
               %address.products-purchase-buy-user-info-text
                 %p
+                  %br
                   =@address.postal_code
                   %br
                   =@address.prefectures
@@ -64,6 +63,7 @@
                   =@address.address_detail
                   =@address.apartment_name
                   =@address.room_number
+                  %br
                   =@address.phone_number
                   %br
                   =@user.last_name
@@ -73,7 +73,5 @@
               郵便局/コンビニ受取をご希望の方は、購入後に
               %span.products-purchase-bold> 取引画面
               から受取場所を変更をすることが可能です。出品者が発送作業を開始した後は受取場所の変更ができませんので、早めに変更を行ってください。
-            -# = form_with(action: :purchase, method: :post, local: true) do
-            -#   = submit_tag("購入する", class:"purchase")
-      
-          = submit_tag("購入する", class:"purchase")
+          %label.products-purchase-btn-default.btn-red.bold
+            = submit_tag("購入する", class:"purchase")
